src/objects/BT_CO_DIR_VendorPerformance__c.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <label>Account Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BT_CO_DIR_VendorPerformanceMaster__c</fullName>
        <label>BT_CO_DIR_VendorPerformanceMaster</label>
        <referenceTo>BT_CO_DIR_VendorPerformanceMaster__c</referenceTo>
        <relationshipLabel>BT_CO_DIR_VendorPerformances</relationshipLabel>
        <relationshipName>BT_CO_DIR_VendorPerformances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CaseVenSubId__c</fullName>
        <label>CaseVenSubId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SubCategory__c</fullName>
        <label>Case SubCategory</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <formula>IF( 

OR( 
Case_SubCategory__c = &apos;Non-Delivery&apos;, 
Case_SubCategory__c = &apos;Non Delivery&apos;, 
Case_SubCategory__c = &apos;Non Start Temp-Stop&apos;, 
Case_SubCategory__c = &apos;Non-Start&apos;, 
Case_SubCategory__c = &apos;Non Start&apos;, 
Case_SubCategory__c = &apos;Non-Start (Temp-Stop)&apos;, 
Case_SubCategory__c = &apos;Short Delivery&apos;, 
Case_SubCategory__c = &apos;Non-Delivery, notified date &gt; 3 days from pub date&apos; 
), &apos;Delivery Related&apos;, &apos;Not Delivery Related&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorAccountId__c</fullName>
        <label>VendorAccountId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Group__c</fullName>
        <label>Vendor Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_DIR_VendorPerformance</label>
    <nameField>
        <label>BT_CO_DIR_VendorPerformance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_DIR_VendorPerformances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>